@@ -1,4 +1,5 @@
 1.1.0 [not yet released]
+ - Fix bug in SystemAssembler, where mesh.init(D-1, D) was not called before assemble
  - Fix bug where the reference count of Py_None was not increased
  - Fix bug in reading TimeSeries of size smaller than 3
  - Improve code design for Mesh FooIterators to avoid dubious down cast
